--- a/first_project/pubspec.yaml
+++ b/first_project/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  link: ^1.0.0
+  url_launcher: ^5.2.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
